--- a/public/views/tips/create.html
+++ b/public/views/tips/create.html
@@ -1,8 +1,13 @@
 <section data-ng-controller="TipsController">
 	<form class="form-horizontal" data-ng-submit="create()">
-		<div class="control-group">
-			<label class="control-label" for="text">Text</label>
+		<div class="control-group ">
+			<label class="control-label" for="text">Added new tips:</label>
 			<div class="controls">
+				<label>Likes:</label>
+				<input data-ng-model="likes" id="likes" type="number" placeholder="likes" />
+				<label>Category:</label>
+				<input data-ng-model="category" id="category" placeholder="Category" />
+				<label>Text:</label>
 				<textarea data-ng-model="text" id="text" cols="30" rows="10" placeholder="Text"></textarea>
 			</div>
 		</div>
