--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -1,3 +1,7 @@
+//libs 
+script(type='text/javascript', src='/lib/jquery/jquery.min.js')
+script(type='text/javascript', src='http://isotope.metafizzy.co/jquery.isotope.min.js')
+
 //AngularJS
 script(type='text/javascript', src='/lib/angular/angular.js')
 script(type='text/javascript', src='/lib/angular-cookies/angular-cookies.js')
