did growth for tips onClik

--- a/public/views/tips/list.html
+++ b/public/views/tips/list.html
@@ -1,13 +1,12 @@
 <section data-ng-controller="TipsController" data-ng-init="find()">
 	<ul class="articles unstyled" id="isotope-container">
-		<li data-ng-click="addlike(tip)" data-ng-size={{tip.likes}} class="isotope-element" data-ng-repeat="tip in tips" _id="{{tip._id}}" lalala-directive>
+		<li data-ng-click="addlike(tip)" data-ng-size={{tip.likes}} class="isotope-element" data-ng-repeat="tip in tips" _id="{{tip._id}}" lalala-directive
+			style="width: {{tips.settingsView.valueOfdivision*tip.likes}}px; height: {{tips.settingsView.valueOfdivision*tip.likes}}px"
+		>
+			<span data-likes="{{tip.likes}}">{{tip.likes}}</span> likes
 			<p class="navbar-text navbar-right">Date<a href="#" class="navbar-link">{{tip.created | date:'medium'}}</a></p>
 			<span>{{tip.created | date:'medium'}}</span> <br />
 			category: <span>{{tip.category}}</span><br/>
-			likes: <span data-likes="{{tip.likes}}">{{tip.likes}}</span>
-
-
-
 			<hr/>
 			text: <div>{{tip.text}}</div>
 		</li>
