--- a/public/css/common.css
+++ b/public/css/common.css
@@ -33,3 +33,13 @@ footer p {
     box-shadow: 1px 1px 1px gray;
     overflow: hidden;
 }
+
+.isotope-item{
+    cursor: pointer;
+
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
