--- a/public/css/common.css
+++ b/public/css/common.css
@@ -33,10 +33,50 @@ footer p {
     box-shadow: 1px 1px 1px gray;
     overflow: hidden;
 }
-
-.isotope-item{
+.tips-tool{
+    white-space: nowrap;
+}
+.tips-btn-smal{
+    border-radius: 5px;
+    padding: 3px 5px;
+    display: inline-block;
     cursor: pointer;
+    color: #ffffff;
+    white-space: nowrap;
+}
+.tips-btn-smal:hover{
+    background-color: orange;
+    box-shadow: 0 1px 2px #000000;
+}
+.tips-btn-smal:active{
+    box-shadow: inset 0 1px 1px #000000;
+}
+.tips-addlikes{
+    background-color: firebrick;
 
+}
+.tips-addlikes:before{
+    content: '\2665';
+    display: inline-block;
+    margin-right: 5px;
+}
+.tips-share{
+    background-color: green;
+}
+.tips-share:before{
+    content: '\272A';
+    display: inline-block;
+    margin-right: 5px;
+}
+.tips-edit{
+    background-color: darkblue;
+}
+.tips-edit:before{
+    content: '\270E';
+    display: inline-block;
+    margin-right: 5px;
+}
+.isotope-item{
     -moz-user-select: -moz-none;
     -o-user-select: none;
     -khtml-user-select: none;
