--- a/public/views/tips/list.html
+++ b/public/views/tips/list.html
@@ -1,9 +1,13 @@
-<section data-ng-controller="TipsController" data-ng-init="find()">
+<section data-ng-controller="TipsController" data-ng-init="show()">
 	<ul class="articles unstyled" id="isotope-container">
-		<li data-ng-click="addlike(tip)" data-ng-size={{tip.likes}} class="isotope-element" data-ng-repeat="tip in tips" _id="{{tip._id}}" lalala-directive
+		<li data-ng-size={{tip.likes}} class="isotope-element" data-ng-repeat="tip in tips" _id="{{tip._id}}" lalala-directive
 			style="width: {{tips.settingsView.valueOfdivision*tip.likes}}px; height: {{tips.settingsView.valueOfdivision*tip.likes}}px"
 		>
-			<span data-likes="{{tip.likes}}">{{tip.likes}}</span> likes
+			<div class="tips-tool">
+				<div data-ng-click="addlike(tip)" class="tips-addlikes tips-btn-smal"><span data-likes="{{tip.likes}}">{{tip.likes}}</span></div>
+				<a href="#!/{{tips.linkEdit}}{{tip._id}}" class="tips-edit tips-btn-smal"><span>Edit</span></a>
+				<div class="tips-share tips-btn-smal"><span>Copy link</span></div>
+			</div>
 			<p class="navbar-text navbar-right">Date<a href="#" class="navbar-link">{{tip.created | date:'medium'}}</a></p>
 			<span>{{tip.created | date:'medium'}}</span> <br />
 			category: <span>{{tip.category}}</span><br/>
