add get one tip on url tips/getonetip/[tip.id]. Add not work controller for page edit tip. Not think of how controller make it work

--- a/public/views/tips/edit.html
+++ b/public/views/tips/edit.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="TipsController">
+<section data-ng-controller="TipController">
 	<form class="form-horizontal" data-ng-submit="saveChange()" data-ng-init="edit()">
 		<div class="control-group">
 			<div class="control-label" for="text">Edit tips: {{tip._id}}</div>
