--- a/public/css/common.css
+++ b/public/css/common.css
@@ -47,6 +47,8 @@ footer p {
 .tips-btn-smal:hover{
     background-color: orange;
     box-shadow: 0 1px 2px #000000;
+    color: #ffffff;
+    text-decoration: none;
 }
 .tips-btn-smal:active{
     box-shadow: inset 0 1px 1px #000000;
