--- a/public/views/header.html
+++ b/public/views/header.html
@@ -1,10 +1,12 @@
 <div class="navbar-inner" data-ng-controller="HeaderController">
-    <ul class="nav">
-        <li>
-            <a class="brand" href="/">Tips Of The Day</a>
-        </li>
-        <li data-ng-repeat="item in menu" ng-class="{active: $uiRoute}">
-            <a href="#!/{{item.link}}">{{item.title}}</a>
-        </li>
-    </ul>
+	<section class="container">
+	    <ul class="nav">
+	        <li>
+	            <a class="brand" href="/">Tips Of The Day</a>
+	        </li>
+	        <li data-ng-repeat="item in menu" ng-class="{active: $uiRoute}">
+	            <a href="#!/{{item.link}}">{{item.title}}</a>
+	        </li>
+	    </ul>
+    </section>
 </div>
