--- a/public/views/tip/edit.html
+++ b/public/views/tip/edit.html
@@ -1,5 +1,5 @@
 <section data-ng-controller="TipController">
-	<form class="form-horizontal" data-ng-submit="saveChange()" data-ng-init="edit()">
+	<form class="form-horizontal" data-ng-init="edit()">
 		<div class="control-group">
 			<div class="control-label" for="text">Edit tips: {{tip._id}}</div>
 			<div class="controls">
