--- a/public/views/tips/create.html
+++ b/public/views/tips/create.html
@@ -1,5 +1,5 @@
 <section data-ng-controller="TipsController">
-	<form class="form-horizontal" data-ng-submit="create()">
+	<form class="form-horizontal" data-ng-submit="createTip()">
 		<div class="control-group">
 			<div class="control-label" for="text">Added new tips:</div>
 			<div class="controls">
