--- a/public/views/tips/edit.html
+++ b/public/views/tips/edit.html
@@ -1,5 +1,6 @@
+edit.html
 <section data-ng-controller="TipsController">
-	<form class="form-horizontal" data-ng-init="getOneTip()" data-ng-submit="update()">
+	<form class="form-horizontal" data-ng-init="getTip()" data-ng-submit="updateTip()">
 		<div class="control-group">
 			<div class="control-label" for="text">Edit tips: {{tip._id}}</div>
 			<div class="controls">
