--- a/public/views/tips/list.html
+++ b/public/views/tips/list.html
@@ -1,11 +1,11 @@
-<section data-ng-controller="TipsController" data-ng-init="show()">
+<section data-ng-controller="TipsController" data-ng-init="showTip()">
 	<ul class="articles unstyled" id="isotope-container">
 		<li data-ng-size={{tip.likes}} class="isotope-element" data-ng-repeat="tip in tips" _id="{{tip._id}}" lalala-directive
 			style="width: {{tips.settingsView.valueOfdivision*tip.likes}}px; height: {{tips.settingsView.valueOfdivision*tip.likes}}px"
 		>
 			<div class="tips-tool">
-				<div data-ng-click="addlike(tip)" class="tips-addlikes tips-btn-smal"><span data-likes="{{tip.likes}}">{{tip.likes}}</span></div>
-				<a href="#!/{{tips.linkEdit}}?id={{tip._id}}" class="tips-edit tips-btn-smal"><span>Edit</span></a>
+				<div data-ng-click="tip.likes=tip.likes+1; updateTip(tip)" class="tips-addlikes tips-btn-smal"><span data-likes="{{tip.likes}}">{{tip.likes}}</span></div>
+				<a href="#!/{{tips.linkEdit}}?tipId={{tip._id}}" data-ng-click="getTip(tip)" class="tips-edit tips-btn-smal"><span>Edit</span></a>
 				<div class="tips-share tips-btn-smal"><span>Copy link</span></div>
 			</div>
 			<p class="navbar-text navbar-right">Date<a href="#" class="navbar-link">{{tip.created | date:'medium'}}</a></p>
